updated to use flex box instead of grid

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox Wireframe Practice</title>
-    <link rel="stylesheet" href="css\reset.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="grid-container">
-        <header class="header">HEADER</header>
-        <main class="main">
-            <article>ARTICLE 1</article>
-            <article>ARTICLE 2</article>
-            <article>ARTICLE 3</article>
-        </main>
-        <aside class="aside">ASIDE</aside>
-        <footer class="footer">FOOTER</footer>
-    </div>
+    <div class="container">
+        <header>HEADER</header>
+        <div class="content">
+          <article>ARTICLE 1</article>
+          <article>ARTICLE 2</article>
+          <article>ARTICLE 3</article>
+          <aside>ASIDE</aside>
+        </div>
+        <footer>FOOTER</footer>
+      </div>
     
 </body>
 </html>
